--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author :
   github : github.com/GTPB
 
 # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-production_url : https://gtpb.github.io/ABSTAT18
+production_url : https://gtpb.github.io/ABSTAT18/
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -50,7 +50,7 @@ JB :
   #     This means always setting the protocol (http|https) or prefixing with "/"
   #
   # NOTE: If replacing this next line with your own URL, you likely want "https://" not "http://"
-  BASE_PATH : https://gtpb.github.io/ABSTAT18
+  BASE_PATH : https://gtpb.github.io/ABSTAT18/
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -103,8 +103,3 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-
-#A Jekyll plugin to convert relative links to Markdown files to their rendered equivalents.
-
-plugins:
-  - jekyll-relative-links
